# FinallyScrambledBrains

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
_scripts/: build.sh
include/StatePattern/: FSM.hpp  IdleState.hpp  State.hpp  WalkState.hpp
src/: FSM.cpp  fsm_controller.cpp  main.cpp
src/state_machine/: State.cpp
src/state_machine/Idle/: IdleState.cpp
src/state_machine/Walk/: WalkState.cpp
tests/: CMakeLists.txt
